--- a/Arca Api/.env
+++ b/Arca Api/.env
@@ -1,5 +1,5 @@
 PORT = 3001
-DB_HOST: localhost
-DB_USER: root
-DB_PASSWORD: 
+DB_HOST: arcaserver.mysql.database.azure.com
+DB_USER: admacias
+DB_PASSWORD: p4sfor_my5q7serv3r
 DB_DATABASE: arca
